// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the UI as expected 1`] = `
<section
  className="lightBlueBackground"
>
  <div
    className="lightBlueBackground sticky"
  >
    <div
      className="charts sticky cloudBlueBackground"
    >
      <div
        className="primaryFont black"
      >
         
        <span
          className="graphText"
        >
          149
           cals 
        </span>
        <i
          className="fas fa-fire-alt"
        />
      </div>
      <div
        className="primaryFont black"
      >
        <span
          className="graphText"
        >
          12
           kg 
        </span>
        <i
          className="fas fa-hiking"
        />
      </div>
    </div>
    <div
      className="iconButtonContainer sticky"
    >
      <i
        className="fas fa-arrow-circle-left skin arrowButtons"
        onClick={[Function]}
      />
      <i
        className="fas fa-arrow-circle-right skin forward arrowButtons"
        onClick={[Function]}
      />
    </div>
    <h2
      className="montebello black sticky resultsTitle"
    >
      <div
        className=" montebello black sticky resultsTitle"
      >
        <div>
          My awesome trip
        </div>
         Results! 
        <div
          className="montebello"
        >
          
        </div>
      </div>
    </h2>
    <div
      className="iconButtonContainer"
    >
      <button
        className="tooltip iconButtons"
      >
        <i
          className="fas fa-paw black"
          onClick={[Function]}
          type="submit"
        >
          <span
            className="tooltiptext primaryFont white"
          >
            print
          </span>
        </i>
      </button>
      <div
        className="primaryFont white redBackground moreButton sticky"
        onClick={[Function]}
      >
        delete selected
        <span
          className="primaryFont text"
        >
          : 
          
        </span>
      </div>
    </div>
    <div
      className="filterButtonContainer moreContainer sticky"
    >
      <a
        aria-current={null}
        href="/add-custom/My favorite treat"
        onClick={[Function]}
      >
        <div
          className="montebello red skinBackground moreButton sticky"
        >
          Make your own item
        </div>
      </a>
      <a
        aria-current="page"
        className="active"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        <div
          className="montebello red skinBackground moreButton sticky"
        >
          Search more items
        </div>
      </a>
    </div>
  </div>
  <table
    className="primaryFont desk"
    id="results-filtered"
  >
    <tbody>
      <tr
        className="blueBackground white"
      >
        <th
          className="date"
          id="date header"
        >
          <span
            className="hidden"
          >
            Date
          </span>
          <i
            alt="date header"
            className="fas fa-calendar-day"
          />
        </th>
        <th
          className="type"
          id="item type (ie breakfast) header"
        >
          <span
            className="hidden"
          >
            Type
          </span>
          <i
            alt="item type (ie breakfast) header"
            className="fas fa-utensils"
          />
        </th>
        <th
          className="traveler"
          id="traveler name header"
        >
          <span
            className="hidden"
          >
            Traveler name
          </span>
          <i
            alt="traveler name header"
            className="fas fa-user-circle"
          />
        </th>
        <th
          className="itemH"
          id="item name header"
        >
          <span
            className="hidden"
          >
            Name
          </span>
          <i
            alt="item name header"
            className="fas fa-carrot"
          />
        </th>
        <th
          className="servingH"
          id="serving quantity header"
        >
          <span
            className="hidden"
          >
            Quantity
          </span>
          <i
            alt="serving quantity header"
            className="fas fa-coins"
          />
        </th>
        <th
          className="unitH"
          id="unit ie tablespoon or cup header"
        >
          <span
            className="hidden"
          >
            Serving unit
          </span>
          <i
            alt="unit ie tablespoon or cup header"
            className="fas fa-ruler-vertical"
          />
        </th>
        <th
          className="weightH gram"
          id="weight in grams header"
        >
          <span
            className="hidden"
          >
            Serving weight
          </span>
          <i
            alt="weight in grams header"
            className="fas fa-balance-scale"
          />
        </th>
        <th
          className="caloriesH cal calS"
          id="total calories header"
        >
          <span
            className="hidden"
          >
            Total calories
          </span>
          <i
            alt="total calories header"
            className="fas fa-fire-alt"
          />
        </th>
        <th
          className="deleteH"
          id="delete header"
        >
          <span
            className="hidden"
          >
            Delete
          </span>
          <i
            alt="delete header"
            className="fas fa-trash-alt"
          />
        </th>
      </tr>
      <tr
        className="one whiteBackground black"
      >
        <td
          className="date"
        >
          <time
            dateTime={"2020-07-06T09:24:42.474Z"}
          >
            Mon-Jul-06
          </time>
        </td>
        <td
          className="type"
        />
        <td
          className="traveler"
        />
        <td
          className="itemH"
        >
          <a
            aria-current={null}
            className="noDeco"
            href="/trip-item/undefined"
            onClick={[Function]}
          >
            <div
              className="purple"
            >
              My favorite treat
            </div>
          </a>
        </td>
        <td
          className="servingH black"
          headers="serving quantity header"
        >
          1
        </td>
        <td
          className="unitH"
          headers="unit ie tablespoon or cup header"
        >
          a handful
        </td>
        <td
          className="weightH  gram"
          headers="weight in grams header"
        >
          100
           total gms
        </td>
        <td
          className="weightH  gram"
        >
          120
           total cals
        </td>
        <td
          className="delete"
        >
           
          <label
            className="tooltiptext delete"
          >
            click and confirm
            <input
              onClick={[Function]}
              type="radio"
            />
          </label>
        </td>
      </tr>
      <tr
        className="one whiteBackground black"
      >
        <td
          className="date"
        >
          <time
            dateTime={"2020-07-06T09:24:42.498Z"}
          >
            Mon-Jul-06
          </time>
        </td>
        <td
          className="type"
        />
        <td
          className="traveler"
        />
        <td
          className="itemH"
        >
          <a
            aria-current={null}
            className="noDeco"
            href="/trip-item/undefined"
            onClick={[Function]}
          >
            <div
              className="purple"
            >
              My favorite beverage
            </div>
          </a>
        </td>
        <td
          className="servingH black"
          headers="serving quantity header"
        >
          1
        </td>
        <td
          className="unitH"
          headers="unit ie tablespoon or cup header"
        >
          oz
        </td>
        <td
          className="weightH  gram"
          headers="weight in grams header"
        >
          2
           total gms
        </td>
        <td
          className="weightH  gram"
        >
          28
           total cals
        </td>
        <td
          className="delete"
        >
           
          <label
            className="tooltiptext delete"
          >
            click and confirm
            <input
              onClick={[Function]}
              type="radio"
            />
          </label>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    className="primaryFont whiteBackground mobileOnly"
    id="results-filtered"
  >
    <tbody>
      <tr
        className="mobile"
      >
        <td
          className="noBorder"
        >
          <img
            alt=""
            className="tableImage "
            src="https://d2eawub7utcl6.cloudfront.net/images/nix-apple-grey.png"
          />
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr
        className="itemH"
      >
        <th
          className="itemH"
          id="item name header"
        >
          <span
            className="hidden"
          >
            Name
          </span>
          <i
            alt="item name header"
            className="fas fa-carrot"
          />
        </th>
        <td>
          <a
            aria-current={null}
            className="noDeco"
            href="/trip-item/undefined"
            onClick={[Function]}
          >
            <div
              className="purple"
            >
              My favorite treat
            </div>
          </a>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="brandH"
          id="brand header"
        >
          <span
            className="hidden"
          >
            Brand
          </span>
          <i
            alt="brand header"
            className="fas fa-tag"
          />
        </th>
        <td
          className="brandId"
          headers="brand header"
        >
          common
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="date"
          id="date header"
        >
          <span
            className="hidden"
          >
            Date
          </span>
          <i
            alt="date header"
            className="fas fa-calendar-day"
          />
        </th>
        <td
          className="date"
        >
          <time
            dateTime={"2020-07-06T09:24:42.500Z"}
          >
            Mon-Jul-06
          </time>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="type"
          id="item type (ie breakfast) header"
        >
          <span
            className="hidden"
          >
            Type
          </span>
          <i
            alt="item type (ie breakfast) header"
            className="fas fa-utensils"
          />
        </th>
        <td
          className="type"
        />
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="traveler"
          id="traveler name header"
        >
          <span
            className="hidden"
          >
            Traveler name
          </span>
          <i
            alt="traveler name header"
            className="fas fa-user-circle"
          />
        </th>
        <td
          className="type"
        />
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="unitH"
          id="unit ie tablespoon or cup header"
        >
          <span
            className="hidden"
          >
            Serving unit
          </span>
          <i
            alt="unit ie tablespoon or cup header"
            className="fas fa-ruler-vertical"
          />
        </th>
        <td
          className="unitH"
          headers="unit ie tablespoon or cup header"
        >
          a handful
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="servingH"
          id="serving quantity header"
        >
          <span
            className="hidden"
          >
            Quantity
          </span>
          <i
            alt="serving quantity header"
            className="fas fa-coins"
          />
        </th>
        <td
          className="servingH black"
          headers="serving quantity header"
        >
          1
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="weightH gram"
          id="weight in grams header"
        >
          <span
            className="hidden"
          >
            Serving weight
          </span>
          <i
            alt="weight in grams header"
            className="fas fa-balance-scale"
          />
        </th>
        <td
          className="weightH  gram"
          headers="weight in grams header"
        >
          100
           total gms
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="caloriesH cal calS"
          id="total calories header"
        >
          <span
            className="hidden"
          >
            Total calories
          </span>
          <i
            alt="total calories header"
            className="fas fa-fire-alt"
          />
        </th>
        <td
          className="weightH  gram"
        >
          120
           total cals
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="deleteH"
          id="delete header"
        >
          <span
            className="hidden"
          >
            Delete
          </span>
          <i
            alt="delete header"
            className="fas fa-trash-alt"
          />
        </th>
        <td
          className="delete"
        >
           
          <label
            className="tooltiptext delete"
          >
            click and confirm
            <input
              onClick={[Function]}
              type="radio"
            />
          </label>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    className="primaryFont whiteBackground mobileOnly"
    id="results-filtered"
  >
    <tbody>
      <tr
        className="mobile"
      >
        <td
          className="noBorder"
        >
          <img
            alt=""
            className="tableImage "
            src="https://nutritionix-api.s3.amazonaws.com/5572031b36869fb5124af830.jpeg"
          />
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr
        className="itemH"
      >
        <th
          className="itemH"
          id="item name header"
        >
          <span
            className="hidden"
          >
            Name
          </span>
          <i
            alt="item name header"
            className="fas fa-carrot"
          />
        </th>
        <td>
          <a
            aria-current={null}
            className="noDeco"
            href="/trip-item/undefined"
            onClick={[Function]}
          >
            <div
              className="purple"
            >
              My favorite beverage
            </div>
          </a>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="brandH"
          id="brand header"
        >
          <span
            className="hidden"
          >
            Brand
          </span>
          <i
            alt="brand header"
            className="fas fa-tag"
          />
        </th>
        <td
          className="brandId"
          headers="brand header"
        >
          My special instant mix
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="date"
          id="date header"
        >
          <span
            className="hidden"
          >
            Date
          </span>
          <i
            alt="date header"
            className="fas fa-calendar-day"
          />
        </th>
        <td
          className="date"
        >
          <time
            dateTime={"2020-07-06T09:24:42.502Z"}
          >
            Mon-Jul-06
          </time>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="type"
          id="item type (ie breakfast) header"
        >
          <span
            className="hidden"
          >
            Type
          </span>
          <i
            alt="item type (ie breakfast) header"
            className="fas fa-utensils"
          />
        </th>
        <td
          className="type"
        />
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="traveler"
          id="traveler name header"
        >
          <span
            className="hidden"
          >
            Traveler name
          </span>
          <i
            alt="traveler name header"
            className="fas fa-user-circle"
          />
        </th>
        <td
          className="type"
        />
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="unitH"
          id="unit ie tablespoon or cup header"
        >
          <span
            className="hidden"
          >
            Serving unit
          </span>
          <i
            alt="unit ie tablespoon or cup header"
            className="fas fa-ruler-vertical"
          />
        </th>
        <td
          className="unitH"
          headers="unit ie tablespoon or cup header"
        >
          oz
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="servingH"
          id="serving quantity header"
        >
          <span
            className="hidden"
          >
            Quantity
          </span>
          <i
            alt="serving quantity header"
            className="fas fa-coins"
          />
        </th>
        <td
          className="servingH black"
          headers="serving quantity header"
        >
          1
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="weightH gram"
          id="weight in grams header"
        >
          <span
            className="hidden"
          >
            Serving weight
          </span>
          <i
            alt="weight in grams header"
            className="fas fa-balance-scale"
          />
        </th>
        <td
          className="weightH  gram"
          headers="weight in grams header"
        >
          2
           total gms
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="caloriesH cal calS"
          id="total calories header"
        >
          <span
            className="hidden"
          >
            Total calories
          </span>
          <i
            alt="total calories header"
            className="fas fa-fire-alt"
          />
        </th>
        <td
          className="weightH  gram"
        >
          28
           total cals
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="deleteH"
          id="delete header"
        >
          <span
            className="hidden"
          >
            Delete
          </span>
          <i
            alt="delete header"
            className="fas fa-trash-alt"
          />
        </th>
        <td
          className="delete"
        >
           
          <label
            className="tooltiptext delete"
          >
            click and confirm
            <input
              onClick={[Function]}
              type="radio"
            />
          </label>
        </td>
      </tr>
    </tbody>
  </table>
</section>
`;

exports[`renders the UI as expected 2`] = `
<section>
  <div
    className="sticky lightBlueBackground"
  >
    <div
      className="sticky"
    >
      <div
        className="iconButtonsContainer"
      >
        <div
          className="back"
        >
          <i
            className="fas fa-arrow-circle-left skin arrowButtons"
            onClick={[Function]}
          />
        </div>
        <div
          className="forward"
        >
          <i
            className="fas fa-arrow-circle-right skin forward arrowButtons"
            onClick={[Function]}
          />
        </div>
      </div>
      <h2
        className="montebello searchResultsTitle white"
      >
         
        See your highest energy results!
      </h2>
    </div>
    <div
      className="iconButtonContainer"
    >
      <button
        className="tooltip iconButtons"
      >
        <i
          className="fas fa-paw black"
          onClick={[Function]}
          type="submit"
        >
          <span
            className="tooltiptext primaryFont white"
          >
            print
          </span>
        </i>
      </button>
      <span
        className="mobileHide"
      >
        <button
          className="tooltip iconButtons"
        >
          <i
            className="fas fa-archive black"
            type="submit"
          >
            <span
              className="tooltiptext primaryFont white"
            >
              save
            </span>
          </i>
        </button>
      </span>
    </div>
    <div
      className="filterButtonContainer moreContainer"
    >
      <a
        aria-current={null}
        href="/add-custom"
        onClick={[Function]}
      >
        <div
          className="montebello red skinBackground moreButton sticky"
        >
          Make your own item
        </div>
      </a>
      <a
        aria-current="page"
        className="active"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        <div
          className="montebello red skinBackground moreButton sticky"
        >
          Search more items
        </div>
      </a>
    </div>
  </div>
  <table
    className="primaryFont desk"
    id="search-results"
  >
    <thead
      className="blueBackground white"
    >
      <tr>
        <th
          className="imageH tableAdjust"
          id="image header"
        >
          <span
            className="hidden"
          >
            Image
          </span>
        </th>
        <th
          className="itemH"
          id="item name header"
        >
          <span
            className="hidden"
          >
            Name
          </span>
          <i
            alt="item name header"
            className="fas fa-carrot"
          />
        </th>
        <th
          className="brandH"
          id="brand header"
        >
          <span
            className="hidden"
          >
            Brand
          </span>
          <i
            alt="brand header"
            className="fas fa-tag"
          />
        </th>
        <th
          className="servingH"
          id="serving quantity header"
        >
          <span
            className="hidden"
          >
            Quantity
          </span>
          <i
            alt="serving quantity header"
            className="fas fa-coins"
          />
        </th>
        <th
          className="unitH"
          id="unit ie tablespoon or cup header"
        >
          <span
            className="hidden"
          >
            Serving unit
          </span>
          <i
            alt="unit ie tablespoon or cup header"
            className="fas fa-ruler-vertical"
          />
        </th>
        <th
          className="weightH gram"
          id="weight in grams header"
        >
          <span
            className="hidden"
          >
            Serving weight
          </span>
          <i
            alt="weight in grams header"
            className="fas fa-balance-scale"
          />
        </th>
        <th
          className="caloriesH cal calS"
          id="total calories header"
        >
          <span
            className="hidden"
          >
            Total calories
          </span>
          <i
            alt="total calories header"
            className="fas fa-fire-alt"
          />
        </th>
        <th
          className="caloriesH"
          id="total calories per 100grams header"
        >
          <span
            className="hidden"
          >
            Total calories per 100 grams
          </span>
          <i
            alt="total calories per 100grams header"
            className="fab fa-superpowers super"
          />
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</section>
`;
